name:                ozkutuk-blog
version:             0.1.0.0
homepage:            https://ozkutuk.me
license:             BSD3
license-file:        LICENSE
author:              Berk Ozkutuk
maintainer:          ozkutuk.berk@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  main-is:             Site.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc
